<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_checker</name>
  <version>0.1.0</version>
  <description>The pointcloud_checker</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_debug_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
